--- a/testsite2/css/style.css
+++ b/testsite2/css/style.css
@@ -14,7 +14,17 @@ text {
 
 h1	{
 	color: rgb(146, 183, 219);
-	margin-right: 30px;
+	margin-left: 1%;
 	padding-bottom: 35px;
 
 }
+
+.buttons {
+    color:#252525;
+    font-size: 20px;
+    margin-left: 1%;
+    margin-top: 10%;
+    border: none;
+    
+}
+
